--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace with your executable path\n",
     "\n",
     "# Blender\n",
-    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
+    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
     "\n",
     "# Unreal Engine\n",
-    "# engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "    # You can also prepare your own project\n",
     "    import shutil\n",
     "    from xrfeitoria.utils.downloader import download\n",
-    "    unreal_project_zip = download(url='https://http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/unreal_project/UE_sample.zip', \n",
+    "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
     "                                    dst_dir=\"./tutorial01/assets/\")\n",
     "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial01/assets/')\n",
     "\n",
@@ -95,7 +95,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "✨ Now you can see a new Blender/Unreal Engine process has been started."
+    "✨ Now you can see a new Blender/Unreal Engine process has been started.\n",
+    "\n",
+    "- Blender\n",
+    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/tutorials/imgs/01/blender/open_blender.png)\n",
+    "\n",
+    "- Unreal Engine\n",
+    "![](http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/tutorials/imgs/01/unreal/open_unreal.png)"
    ]
   },
   {
@@ -116,7 +122,7 @@
     "from xrfeitoria.utils.downloader import download\n",
     "\n",
     "# Download the Koupan-chan model\n",
-    "kc_path = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/koupen_chan/koupen_chan.fbx', dst_dir=\"./tutorial01/assets/\")"
+    "kc_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/koupen_chan.fbx', dst_dir=\"./tutorial01/assets/\")"
    ]
   },
   {
@@ -142,14 +148,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Switch to the engine window, and you can see the spot has been imported. The space to place the ``Actor``s is called ``Level``. You can add, remove, or modify ``Actor``s in the `Level`."
+    "Switch to the engine window, and you can see the spot has been imported. The space to place the ``Actor``s is called ``Level``. You can add, remove, or modify ``Actor``s in the `Level`.\n",
+    "\n",
+    "- Blender\n",
+    "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/blender/import_kc.png)\n",
+    "\n",
+    "- Unreal Engine\n",
+    "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/unreal/import_kc.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you use ``Unreal Engine``, the ``Level`` should be saved after you modify it."
+    "If you use ``Unreal Engine``, the ``Level`` should be saved after been modified."
    ]
   },
   {
@@ -188,7 +200,7 @@
     "\n",
     "# Use `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
     "sequence_name = 'MySequence'\n",
-    "with xf_runner.Sequence.new(seq_name=sequence_name) as seq:\n",
+    "with xf_runner.Sequence.new(seq_name=sequence_name, replace=True) as seq:\n",
     "\n",
     "    # Add a camera and make it look at the spot\n",
     "    camera_location = (0.0, -0.8, 0.0)\n",
@@ -257,6 +269,7 @@
     "import matplotlib.pyplot as plt\n",
     "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
     "\n",
+    "\n",
     "xf_viwer = XRFeitoriaReader(sequence_dir=f'./tutorial01/outputs/{render_engine}/{sequence_name}/')\n",
     "img = xf_viwer.get_img(camera_name=camera.name, frame=0)\n",
     "diffuse = xf_viwer.get_diffuse(camera_name=camera.name, frame=0)\n",
@@ -290,6 +303,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> Hint: When using Unreal Engine, if the image of the mask looks weird, try running the notebook again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 6. Final step\n",
     "\n",
     "🥳 This is a good start! Finally, **Do remember** to close the engine. "
@@ -308,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ref to [api docs](../../apis/xrfeitoria.rst), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
+    "Ref to [api docs](https://xrfeitoria.readthedocs.io/en/latest/apis/xrfeitoria.html), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
   },
   {
