--- a/tutorials/02_random_transformation.ipynb
+++ b/tutorials/02_random_transformation.ipynb
@@ -4,24 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial02 - Add transform keys\n",
+    "# Tutorial02 - Random Transformation\n",
     "\n",
     "## Overview\n",
     "\n",
     "🚀 By the last tutorial, you have learned the concept of ``Actor``, ``Level`` and ``Sequence``. In this tutorial, you will learn how to add transform keys to an ``Actor`` in order to render multiple poses of it. By the end of this tutorial, you will be able to:\n",
-    "- Open Blender/Unreal Engine by XRFeitoria\n",
-    "- Import meshes as the ``Actor``s in the ``Level``\n",
-    "- Set ``Actor``s' scale in the ``Level``\n",
-    "- Create a `Sequence` for rendering and adding transform keys to `Actor`s\n",
+    "- Initialize XRFeitoria\n",
+    "- Import ``Actor`` and label it by ``stencil value``\n",
+    "- Set ``Actor``'s scale in the ``Level``\n",
+    "- Create a `Sequence` for rendering and adding transform keys to `Actor`\n",
     "- Add a camera in the `Sequence`\n",
-    "- Render and save images"
+    "- Render images and annotations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Preparation\n",
+    "## 1. Initialization\n",
     "\n",
     "Install the following packages that will be used in this tutorial:"
    ]
@@ -61,10 +61,10 @@
     "# Replace with your executable path\n",
     "\n",
     "# Blender\n",
-    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
+    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
     "\n",
     "# Unreal Engine\n",
-    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "# engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
    ]
   },
   {
@@ -79,14 +79,14 @@
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
     "    render_engine = 'blender'\n",
-    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True, replace_plugin=True, dev_plugin=True)\n",
+    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=False, replace_plugin=True, dev_plugin=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
     "    # Here we use a sample project, which is downloaded from the following link\n",
     "    # You can also prepare your own project\n",
     "    import shutil\n",
     "    from xrfeitoria.utils.downloader import download\n",
-    "    unreal_project_zip = download(url='https://http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/unreal_project/UE_sample.zip', \n",
+    "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
     "                                    dst_dir=\"./tutorial02/assets/\")\n",
     "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial02/assets/')\n",
     "\n",
@@ -112,7 +112,7 @@
    "source": [
     "## 3. Import meshes\n",
     "\n",
-    "Download the meshes from [Objaverse](https://objaverse.allenai.org/objaverse-1.0/)."
+    "Download some meshes from [Objaverse](https://objaverse.allenai.org/objaverse-1.0/)."
    ]
   },
   {
@@ -125,8 +125,6 @@
     "import objaverse\n",
     "objects = objaverse.load_objects(\n",
     "    uids=['eb0807309530496aaab9dcff67bf5c31',\n",
-    "          'c55eff0309a14cf09423d238900cc7c2',\n",
-    "          'd0e07b22f1d54b968943e7a896235a65',\n",
     "          'b4065dd5ce9d46be90db3e1f3e4b9cc1',\n",
     "          '0176be079c2449e7aaebfb652910a854',\n",
     "          'f130ebeb60f24ed8bd3714a7ed3ba280',\n",
@@ -141,7 +139,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the meshes to create ``Actor`` instances in the ``Level``."
+    "Import the meshes to create ``Actor`` instances in the ``Level``. \n",
+    "\n",
+    "Here we set different ``stencil_value`` for each ``Actor``. The [stencil value](https://xrfeitoria.readthedocs.io/en/latest/faq.html#what-is-stencil-value) is used to distinguish different ``Actor``s when rendering segmentation masks."
    ]
   },
   {
@@ -150,10 +150,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "actors = []\n",
-    "for _, file_path in objects.items():\n",
-    "    actor = xf_runner.Actor.import_from_file(file_path=file_path)\n",
+    "for idx, file_path in enumerate(objects.values()):\n",
+    "    actor = xf_runner.Actor.import_from_file(file_path=file_path, stencil_value=(idx+1)*10)\n",
     "    actors.append(actor)"
    ]
   },
@@ -163,7 +162,7 @@
    "source": [
     "Switch to the engine window, and you can see the meshes has been imported.\n",
     "\n",
-    "Then, we adjust the scale of the Actors to make their sizes equal to 0.2m."
+    "Then, we adjust the scale of the Actors to make their sizes equal to 0.3m."
    ]
   },
   {
@@ -172,8 +171,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actor_size = 0.2\n",
+    "actor_size = 0.3\n",
     "for actor in actors:\n",
+    "    actor.scale = (1, 1, 1)\n",
     "    actor.scale = (actor_size / max(actor.dimensions), ) * 3"
    ]
   },
@@ -181,7 +181,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you use ``Unreal Engine``, the ``Level`` should be saved after you modify it."
+    "Now they look like:\n",
+    "\n",
+    "- Blender\n",
+    "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/02/blender/scale_the_actors.png)\n",
+    "\n",
+    "- Unreal Engine\n",
+    "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/02/unreal/scale_the_actors.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you use ``Unreal Engine``, the ``Level`` should be saved after been modified."
    ]
   },
   {
@@ -213,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">``Transform keys`` record the transformation (location, rotation and scale) of an ``Actor`` at specific frames, and the transformation between two adjacent keys will be interpolated by the specified interpolation method. By adding transform keys, you can render multiple poses of an ``Actor``.\n",
+    ">``Transform keys`` record the transformation (location, rotation and scale) of an ``Actor`` or a ``Camera`` at specific frames, and the transformation between two adjacent keys will be interpolated by the specified interpolation method. By adding transform keys, you can render multiple poses of an ``Actor``.\n",
     ">In ``XRFeitoria``, transform keys are always stored in a list, and the members of the list are [``SequenceTransformKey``](https://xrfeitoria.readthedocs.io/en/latest/apis/generated/xrfeitoria.data_structure.models.SequenceTransformKey.html) object.\n",
     "\n",
     "Firstly, we randomly generate some transform keys for each actors."
@@ -259,7 +272,7 @@
     "                           random.random() * 360.0)\n",
     "        \n",
     "        # Generate random scales\n",
-    "        scale = random.uniform(0.8, 1.0)\n",
+    "        scale = random.uniform(0.5, 1.0)\n",
     "        random_scale = (scale * actor_scale[0],\n",
     "                        scale * actor_scale[1],\n",
     "                        scale * actor_scale[2])\n",
@@ -295,7 +308,7 @@
     "# Use the `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
     "# The argument `seq_length` controls the number of frames to be rendered. \n",
     "sequence_name = 'MySequence'\n",
-    "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=frame_num) as seq:\n",
+    "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=frame_num, replace=True) as seq:\n",
     "    ##############################\n",
     "    ##### Add transform keys #####\n",
     "    ##############################\n",
@@ -327,9 +340,7 @@
     "        render_passes=[RenderPass('img', 'png'),\n",
     "                       RenderPass('mask', 'exr'),\n",
     "                       RenderPass('normal', 'exr'),\n",
-    "                       RenderPass('diffuse', 'exr'),\n",
-    "                       RenderPass('depth', 'exr'),\n",
-    "                       RenderPass('flow', 'exr')],\n",
+    "                       RenderPass('diffuse', 'exr')],\n",
     "    )"
    ]
   },
@@ -375,41 +386,42 @@
     "    mask = xf_viwer.get_mask(camera_name=camera.name, frame=i)\n",
     "    normal = xf_viwer.get_normal(camera_name=camera.name, frame=i)\n",
     "    diffuse = xf_viwer.get_diffuse(camera_name=camera.name, frame=i)\n",
-    "    depth = xf_viwer.get_depth(camera_name=camera.name, frame=i)\n",
-    "    flow = xf_viwer.get_flow(camera_name=camera.name, frame=i)\n",
     "\n",
     "    plt.figure(figsize=(20, 20))\n",
-    "    plt.title(f'Frame {i}')\n",
     "\n",
-    "    plt.subplot(1, 6, 1)\n",
+    "    plt.subplot(1, 4, 1)\n",
     "    plt.imshow(img)\n",
     "    plt.axis('off')\n",
     "    plt.title('img')\n",
     "\n",
-    "    plt.subplot(1, 6, 2)\n",
+    "    plt.subplot(1, 4, 2)\n",
     "    plt.imshow(mask)\n",
     "    plt.axis('off')\n",
     "    plt.title('mask')\n",
     "\n",
-    "    plt.subplot(1, 6, 3)\n",
+    "    plt.subplot(1, 4, 3)\n",
     "    plt.imshow(normal)\n",
     "    plt.axis('off')\n",
     "    plt.title('normal')\n",
     "\n",
-    "    plt.subplot(1, 6, 4)\n",
+    "    plt.subplot(1, 4, 4)\n",
     "    plt.imshow(diffuse)\n",
     "    plt.axis('off')\n",
-    "    plt.title('diffuse')\n",
-    "\n",
-    "    plt.subplot(1, 6, 5)\n",
-    "    plt.imshow(depth)\n",
-    "    plt.axis('off')\n",
-    "    plt.title('depth')\n",
-    "\n",
-    "    plt.subplot(1, 6, 6)\n",
-    "    plt.imshow(flow)\n",
-    "    plt.axis('off')\n",
-    "    plt.title('flow')"
+    "    plt.title('diffuse')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Hint: When using Unreal Engine, if the images of the mask look weird, try running the notebook again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, close the engine by:"
    ]
   },
   {
@@ -420,6 +432,13 @@
    "source": [
     "# Close the engine\n",
     "xf_runner.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref to [api docs](https://xrfeitoria.readthedocs.io/en/latest/apis/xrfeitoria.html), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
   }
  ],
