--- a/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
+++ b/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
@@ -9,21 +9,21 @@
     "## Overview\n",
     "\n",
     "🚀 This tutorial provides an example of rendering animated skeletal meshes from different points of view. By the end of this tutorial, you will be able to:\n",
-    "- Open Blender/Unreal Engine by XRFeitoria\n",
+    "- Initialize XRFeitoria\n",
     "- Import a skeletal mesh with animation\n",
     "- Import another skeletal mesh without animation and setup animation for it\n",
-    "- Set ``Actor``s' location and scale in the ``Level``\n",
+    "- Set ``Actor``'s location in the ``Level``\n",
     "- Create a `Sequence` for rendering\n",
     "- Add multiple static cameras in the `Sequence`\n",
     "- Add a moving camera with transform keys in the `Sequence`\n",
-    "- Render and save images"
+    "- Render images and annotations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Preparation\n",
+    "## 1. Initialization\n",
     "\n",
     "Similar as Tutorial 01, specify your engine path and initialize XRFeitoria."
    ]
@@ -40,16 +40,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Replace with your executable path\n",
     "\n",
     "# Blender\n",
-    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
+    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
     "\n",
     "# Unreal Engine\n",
-    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.2/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "# engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
    ]
   },
   {
@@ -71,7 +73,7 @@
     "    # You can also prepare your own project\n",
     "    import shutil\n",
     "    from xrfeitoria.utils.downloader import download\n",
-    "    unreal_project_zip = download(url='http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/unreal_project/UE_Sample.zip', \n",
+    "    unreal_project_zip = download(url='https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/unreal_project/UE_Sample.zip', \n",
     "                                    dst_dir=\"./tutorial03/assets/\")\n",
     "    shutil.unpack_archive(filename=unreal_project_zip, extract_dir='./tutorial03/assets/')\n",
     "\n",
@@ -98,9 +100,7 @@
    "source": [
     "## 3. Import skeletal meshes to Level\n",
     "\n",
-    "Download the skeletal meshes in [SynBody](https://synbody.github.io/SynBody/) to local folder and import them to ``Level``.\n",
-    "\n",
-    "``Level`` is the space to place all `Actor`s. You can add, remove, or modify `Actor`s in the ``Level``."
+    "Download the skeletal meshes in [SynBody](https://synbody.github.io/SynBody/) to local folder and import them to ``Level``."
    ]
   },
   {
@@ -112,16 +112,18 @@
     "from xrfeitoria.utils.downloader import download\n",
     "\n",
     "# Download the skeletal meshes\n",
-    "actor1_path = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/SMPL-XL/SMPL-XL-01_Subject_75_F_12.fbx', dst_dir=\"./tutorial03/assets/\")\n",
-    "actor2_path = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/SMPL-XL/SMPL-XL-02.fbx', dst_dir=\"./tutorial03/assets/\")\n",
-    "actor2_motion_path = download('http://file.bj.zoe.sensetime.com/resources/meihaiyi/xrfeitoria/assets/SMPL-XL/walking(15_01).fbx', dst_dir=\"./tutorial03/assets/\")"
+    "actor1_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/SMPL-XL/SMPL-XL-00439__Subject_75_F_12.fbx', dst_dir=\"./tutorial03/assets/\")\n",
+    "actor2_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/SMPL-XL/SMPL-XL-00045.fbx', dst_dir=\"./tutorial03/assets/\")\n",
+    "actor2_motion_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/SMPL-XL/walking__15_01.fbx', dst_dir=\"./tutorial03/assets/\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we import two actors. The actor1 has animation and the actor2 has no animation."
+    "Here we import two actors. The ``actor1`` has animation and the ``actor2`` has no animation.\n",
+    "\n",
+    "And we set different [stencil value](https://xrfeitoria.readthedocs.io/en/latest/faq.html#what-is-stencil-value) for each ``Actor`` to distinguish different ``Actor``s when rendering segmentation masks."
    ]
   },
   {
@@ -131,22 +133,15 @@
    "outputs": [],
    "source": [
     "# Import the skeletal mesh\n",
-    "actor1 = xf_runner.Actor.import_from_file(file_path=actor1_path)\n",
-    "actor2 = xf_runner.Actor.import_from_file(file_path=actor2_path)"
+    "actor1 = xf_runner.Actor.import_from_file(file_path=actor1_path, stencil_value=100)\n",
+    "actor2 = xf_runner.Actor.import_from_file(file_path=actor2_path, stencil_value=200)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check them in the engine. Click the play button, and you will see the actor1 has animation and the actor2 is static."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the animation of the actor2 from another file and set it to the actor2"
+    "Then, we load an animation from another file and set it to the ``actor2``"
    ]
   },
   {
@@ -156,13 +151,6 @@
    "outputs": [],
    "source": [
     "actor2.setup_animation(animation_path=actor2_motion_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check the engine again. Now the actor2 also has animation."
    ]
   },
   {
@@ -188,7 +176,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you use ``Unreal Engine``, the final step before rendering is to save the ``Level``. You can save the ``Level`` by"
+    "Now they look like:\n",
+    "\n",
+    "- Blender\n",
+    "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/03/blender/two_actors.png)\n",
+    "\n",
+    "- Unreal Engine\n",
+    "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/03/unreal/two_actors.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you use ``Unreal Engine``, the ``Level`` should be saved after been modified."
    ]
   },
   {
@@ -230,7 +231,8 @@
     "# Use `with` statement to create a sequence, and it will be automatically close the sequence after the code block is executed.\n",
     "# The argument `seq_length` controls the number of frames to be rendered. \n",
     "sequence_name = 'MySequence'\n",
-    "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=6) as seq:\n",
+    "frame_num = 6\n",
+    "with xf_runner.Sequence.new(seq_name=sequence_name, seq_length=frame_num, replace=True) as seq:\n",
     "\n",
     "    # Get the bounding boxes of the actors\n",
     "    actor1_bbox = actor1.bound_box\n",
@@ -240,7 +242,7 @@
     "    actor1_center = ((actor1_bbox[0][0] + actor1_bbox[1][0]) / 2, (actor1_bbox[0][1] + actor1_bbox[1][1]) / 2, (actor1_bbox[0][2] + actor1_bbox[1][2]) / 2)\n",
     "    actor2_center = ((actor2_bbox[0][0] + actor2_bbox[1][0]) / 2, (actor2_bbox[0][1] + actor2_bbox[1][1]) / 2, (actor2_bbox[0][2] + actor2_bbox[1][2]) / 2)\n",
     "    actors_center = ((actor1_center[0] + actor2_center[0]) / 2, (actor1_center[1] + actor2_center[1]) / 2, (actor1_center[2] + actor2_center[2]) / 2)\n",
-    "\n",
+    "    \n",
     "    ##########################################################################\n",
     "    # Add 6 static cameras and a moving camera around the actors for rendering\n",
     "    ##########################################################################\n",
@@ -298,8 +300,6 @@
     "        resolution=(1280, 720),\n",
     "        render_passes=[RenderPass('img', 'png'),\n",
     "                       RenderPass('mask', 'exr'),\n",
-    "                       RenderPass('depth', 'exr'),\n",
-    "                       RenderPass('flow', 'exr'),\n",
     "                       RenderPass('normal', 'exr'),\n",
     "                       RenderPass('diffuse', 'exr')]\n",
     "    )"
@@ -359,6 +359,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View the rendered images and annotations of the camera ``static_camera_2`` by:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from xrfeitoria.utils.reader import XRFeitoriaReader\n",
+    "\n",
+    "xf_viwer = XRFeitoriaReader(sequence_dir=f'./tutorial03/outputs/{render_engine}/{sequence_name}/')\n",
+    "\n",
+    "camera_name = 'static_camera_2'\n",
+    "for i in range(frame_num):\n",
+    "    img = xf_viwer.get_img(camera_name=camera_name, frame=i)\n",
+    "    mask = xf_viwer.get_mask(camera_name=camera_name, frame=i)\n",
+    "    normal = xf_viwer.get_normal(camera_name=camera_name, frame=i)\n",
+    "    diffuse = xf_viwer.get_diffuse(camera_name=camera_name, frame=i)\n",
+    "\n",
+    "    plt.figure(figsize=(20, 20))\n",
+    "\n",
+    "    plt.subplot(1, 4, 1)\n",
+    "    plt.imshow(img)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('img')\n",
+    "\n",
+    "    plt.subplot(1, 4, 2)\n",
+    "    plt.imshow(mask)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('mask')\n",
+    "\n",
+    "    plt.subplot(1, 4, 3)\n",
+    "    plt.imshow(normal)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('normal')\n",
+    "\n",
+    "    plt.subplot(1, 4, 4)\n",
+    "    plt.imshow(diffuse)\n",
+    "    plt.axis('off')\n",
+    "    plt.title('diffuse')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Hint: When using Unreal Engine, if the images of the mask look weird, try running the notebook again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, close the engine by:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -366,6 +428,13 @@
    "source": [
     "# Close the engine\n",
     "xf_runner.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref to [api docs](https://xrfeitoria.readthedocs.io/en/latest/apis/xrfeitoria.html), you can always use ``with`` statement to ensure the engine is closed when the codes are finished."
    ]
   }
  ],
