--- a/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
+++ b/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
@@ -48,10 +48,10 @@
     "# Replace with your executable path\n",
     "\n",
     "# Blender\n",
-    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
+    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
     "\n",
     "# Unreal Engine\n",
-    "# engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
    ]
   },
   {
