--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## 1. Import XRFeitoria\n",
     "\n",
-    "After [Installing](../../index.rst#installation), import ``XRfeitoria`` by"
+    "After [Installing](https://xrfeitoria.readthedocs.io/en/latest/#installation), import ``XRfeitoria`` by"
    ]
   },
   {
@@ -51,12 +51,7 @@
    "outputs": [],
    "source": [
     "# Replace with your executable path\n",
-    "\n",
-    "# Blender\n",
-    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
-    "\n",
-    "# Unreal Engine\n",
-    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "engine_exec_path = 'C:/Program Files/Blender Foundation/Blender 3.3/blender.exe'"
    ]
   },
   {
