--- a/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
+++ b/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
@@ -46,12 +46,7 @@
    "outputs": [],
    "source": [
     "# Replace with your executable path\n",
-    "\n",
-    "# Blender\n",
-    "# engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
-    "\n",
-    "# Unreal Engine\n",
-    "engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'"
    ]
   },
   {
@@ -98,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Import skeletal meshes to Level\n",
+    "## 2. Import skeletal meshes to Level\n",
     "\n",
     "Download the skeletal meshes in [SynBody](https://synbody.github.io/SynBody/) to local folder and import them to ``Level``."
    ]
@@ -207,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Add a sequence for rendering\n",
+    "## 3. Add a sequence for rendering\n",
     "\n",
     "``Sequence`` is a multifunctional class in XRFeitoria. It can be used for:\n",
     "- rendering\n",
@@ -309,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Render\n",
+    "## 4. Render\n",
     "\n",
     "The following code renders all the render jobs and save the images to the ``output_path`` set in ``seq.add_to_renderer`` above."
    ]
