--- a/tutorials/02_random_transformation.ipynb
+++ b/tutorials/02_random_transformation.ipynb
@@ -59,12 +59,7 @@
    "outputs": [],
    "source": [
     "# Replace with your executable path\n",
-    "\n",
-    "# Blender\n",
-    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'\n",
-    "\n",
-    "# Unreal Engine\n",
-    "# engine_exec_path = 'D:/Program Files/Epic Games/UE_5.1/Engine/Binaries/Win64/UnrealEditor-Cmd.exe'"
+    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'"
    ]
   },
   {
@@ -110,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Import meshes\n",
+    "## 2. Import meshes\n",
     "\n",
     "Download some meshes from [Objaverse](https://objaverse.allenai.org/objaverse-1.0/)."
    ]
@@ -212,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Add a sequence for rendering and adding transform keys\n",
+    "## 3. Add a sequence for rendering and adding transform keys\n",
     "\n",
     "``Sequence`` is a multifunctional class in XRFeitoria. It can be used for:\n",
     "- rendering\n",
@@ -348,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Render\n",
+    "## 4. Render\n",
     "\n",
     "The following code renders all the render jobs and save the images to the ``output_path`` set in ``seq.add_to_renderer`` above."
    ]
