[fix] fix bugs in tutorial01

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "## 3. Import a mesh\n",
     "\n",
-    "Download the scanned Koupan Chan model by the following cell."
+    "Download the scanned Koupen Chan model by the following cell."
    ]
   },
   {
@@ -116,7 +116,7 @@
    "source": [
     "from xrfeitoria.utils.downloader import download\n",
     "\n",
-    "# Download the Koupan-chan model\n",
+    "# Download the Koupen-chan model\n",
     "kc_path = download('https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/assets/koupen_chan.fbx', dst_dir=\"./tutorial01/assets/\")"
    ]
   },
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the Koupan-chan\n",
+    "# Import the Koupen-chan\n",
     "actor_kc = xf_runner.Actor.import_from_file(file_path=kc_path)"
    ]
   },
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Switch to the engine window, and you can see the spot has been imported. The space to place the ``Actor``s is called ``Level``. You can add, remove, or modify ``Actor``s in the `Level`.\n",
+    "Switch to the engine window, and you can see the Koupen chan has been imported. The space to place the ``Actor``s is called ``Level``. You can add, remove, or modify ``Actor``s in the `Level`.\n",
     "\n",
     "- Blender\n",
     "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/blender/import_kc.png)\n",
@@ -197,7 +197,7 @@
     "sequence_name = 'MySequence'\n",
     "with xf_runner.Sequence.new(seq_name=sequence_name, replace=True) as seq:\n",
     "\n",
-    "    # Add a camera and make it look at the spot\n",
+    "    # Add a camera and make it look at the koupen-chan\n",
     "    camera_location = (0.0, -0.8, 0.0)\n",
     "    camera_rotation = xf_runner.utils.get_rotation_to_look_at(location=camera_location, target=actor_kc.location)\n",
     "    camera = seq.spawn_camera(location=camera_location, rotation=camera_rotation, fov=90)\n",
