--- a/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
+++ b/tutorials/03_skeletal_mesh_and_multiview_rendering.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Replace with your executable path\n",
-    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'"
+    "engine_exec_path = 'C:/Program Files/Blender Foundation/Blender 3.3/blender.exe'"
    ]
   },
   {
