rename and fix tutorials

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -66,7 +66,7 @@
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
     "    render_engine = 'blender'\n",
-    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True, replace_plugin=True, dev_plugin=True)\n",
+    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
     "    # Here we use a sample project, which is downloaded from the following link\n",
@@ -82,8 +82,7 @@
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
-    "                                project_path='./tutorial01/assets/UE_sample/UE_sample.uproject',\n",
-    "                                replace_plugin=True, dev_plugin=True)"
+    "                                project_path='./tutorial01/assets/UE_sample/UE_sample.uproject')"
    ]
   },
   {
@@ -214,7 +213,8 @@
     "        render_passes=[RenderPass('img', 'png'),\n",
     "                       RenderPass('mask', 'exr'),\n",
     "                       RenderPass('normal', 'exr'),\n",
-    "                       RenderPass('diffuse', 'exr')]\n",
+    "                       RenderPass('diffuse', 'exr'),\n",
+    "                       RenderPass('flow', 'exr')]\n",
     "    )"
    ]
   },
