--- a/tutorials/03_human_nerf.ipynb
+++ b/tutorials/03_human_nerf.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial03 - Skeletal Mesh and Multi-view Rendering\n",
+    "# Tutorial03 - Human NeRF\n",
     "\n",
     "## Overview\n",
     "\n",
-    "🚀 This tutorial provides an example of rendering animated skeletal meshes from different points of view. By the end of this tutorial, you will be able to:\n",
+    "🚀 This tutorial provides an example of rendering animated skeletal meshes from different points of view. The rendered images can support various research topics, including human pose and shape estimation (HPS) and novel view synthesis for human (Human NeRF). By the end of this tutorial, you will be able to:\n",
     "- Initialize XRFeitoria\n",
     "- Import a skeletal mesh with animation\n",
     "- Import another skeletal mesh without animation and setup animation for it\n",
@@ -61,7 +61,7 @@
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
     "    render_engine = 'blender'\n",
-    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True, replace_plugin=True, dev_plugin=True)\n",
+    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
     "    # Here we use a sample project, which is downloaded from the following link\n",
@@ -77,9 +77,7 @@
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
-    "                                project_path='./tutorial03/assets/UE_sample/UE_sample.uproject',\n",
-    "                                replace_plugin=True,\n",
-    "                                dev_plugin=True)"
+    "                                project_path='./tutorial03/assets/UE_sample/UE_sample.uproject')"
    ]
   },
   {
