--- a/tutorials/02_randomization.ipynb
+++ b/tutorials/02_randomization.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial02 - Random Transformation\n",
+    "# Tutorial02 - Randomization\n",
     "\n",
     "## Overview\n",
     "\n",
-    "🚀 By the last tutorial, you have learned the concept of ``Actor``, ``Level`` and ``Sequence``. In this tutorial, you will learn how to add transform keys to an ``Actor`` in order to render multiple poses of it. By the end of this tutorial, you will be able to:\n",
+    "🚀 By the last tutorial, you have learned the concept of ``Actor``, ``Level`` and ``Sequence``. In this tutorial, you will learn how to add random transform keys to an ``Actor`` in order to render multiple poses of it. By the end of this tutorial, you will be able to:\n",
     "- Initialize XRFeitoria\n",
     "- Import ``Actor`` and label it by ``stencil value``\n",
     "- Set ``Actor``'s scale in the ``Level``\n",
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Replace with your executable path\n",
-    "engine_exec_path = 'D:/Program Files/Blender Foundation/Blender 3.3/blender.exe'"
+    "engine_exec_path = 'C:/Program Files/Blender Foundation/Blender 3.3/blender.exe'"
    ]
   },
   {
@@ -74,7 +74,7 @@
     "if 'blender' in exec_path_stem:\n",
     "    # Open Blender\n",
     "    render_engine = 'blender'\n",
-    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=False, replace_plugin=True, dev_plugin=True)\n",
+    "    xf_runner = xf.init_blender(exec_path=engine_exec_path, background=False, new_process=True)\n",
     "elif 'unreal' in exec_path_stem:\n",
     "    # Unreal Engine requires a project to be opened\n",
     "    # Here we use a sample project, which is downloaded from the following link\n",
@@ -90,8 +90,7 @@
     "    xf_runner = xf.init_unreal(exec_path=engine_exec_path, \n",
     "                                background=False, \n",
     "                                new_process=True, \n",
-    "                                project_path='./tutorial02/assets/UE_sample/UE_sample.uproject',\n",
-    "                                replace_plugin=True, dev_plugin=True)"
+    "                                project_path='./tutorial02/assets/UE_sample/UE_sample.uproject')"
    ]
   },
   {
