[fix] fix bug in tutorial01

--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -213,8 +213,7 @@
     "        render_passes=[RenderPass('img', 'png'),\n",
     "                       RenderPass('mask', 'exr'),\n",
     "                       RenderPass('normal', 'exr'),\n",
-    "                       RenderPass('diffuse', 'exr'),\n",
-    "                       RenderPass('flow', 'exr')]\n",
+    "                       RenderPass('diffuse', 'exr')]\n",
     "    )"
    ]
   },
