--- a/tutorials/01_get_started.ipynb
+++ b/tutorials/01_get_started.ipynb
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Switch to the engine window, and you can see the Koupen chan has been imported. The space to place the ``Actor``s is called ``Level``. You can add, remove, or modify ``Actor``s in the `Level`.\n",
+    "Switch to the engine window, and you can see the Koupen chan has been imported. The space to place ``Actor`` is called ``Level``. You can add, remove, or modify ``Actor`` in the `Level`.\n",
     "\n",
     "- Blender\n",
     "![](https://openxrlab-share.oss-cn-hongkong.aliyuncs.com/xrfeitoria/tutorials/imgs/01/blender/import_kc.png)\n",
@@ -338,7 +338,7 @@
     "- Add a `Camera`\n",
     "- Render\n",
     "\n",
-    "It is worth mention that while Sequences do not directly perform rendering, the creation of Sequences is necessary for adding cameras and submitting rendering jobs. And the detailed definitions of the classes [`Actor`](https://xrfeitoria.readthedocs.io/en/latest/apis/actor.html), [`Camera`](https://xrfeitoria.readthedocs.io/en/latest/apis/camera.html), and [`Sequence`](https://xrfeitoria.readthedocs.io/en/latest/apis/sequence.html) can be referred to the documentation."
+    "It is worth mention that while ``Sequence`` do not directly perform rendering, the creation of ``Sequence`` is necessary for adding cameras and submitting rendering jobs. And the detailed definitions of the classes [Actor](https://xrfeitoria.readthedocs.io/en/latest/apis/actor.html), [Camera](https://xrfeitoria.readthedocs.io/en/latest/apis/camera.html), and [Sequence](https://xrfeitoria.readthedocs.io/en/latest/apis/sequence.html) can be referred to the documentation."
    ]
   }
  ],
