--- a/tutorials/02_randomization.ipynb
+++ b/tutorials/02_randomization.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "Import the meshes to create ``Actor`` instances in the ``Level``. \n",
     "\n",
-    "Here we set different ``stencil_value`` for each ``Actor``. The [stencil value](https://xrfeitoria.readthedocs.io/en/latest/faq.html#what-is-stencil-value) is used to distinguish different ``Actor``s when rendering segmentation masks."
+    "Here we set different ``stencil_value`` for each ``Actor``. The [stencil value](https://xrfeitoria.readthedocs.io/en/latest/faq.html#what-is-stencil-value) is used to distinguish different Actors when rendering segmentation masks."
    ]
   },
   {
