--- a/tutorials/03_human_nerf.ipynb
+++ b/tutorials/03_human_nerf.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "Here we import two actors. The ``actor1`` has animation and the ``actor2`` has no animation.\n",
     "\n",
-    "And we set different [stencil value](https://xrfeitoria.readthedocs.io/en/latest/faq.html#what-is-stencil-value) for each ``Actor`` to distinguish different ``Actor``s when rendering segmentation masks."
+    "And we set different [stencil value](https://xrfeitoria.readthedocs.io/en/latest/faq.html#what-is-stencil-value) for each ``Actor`` to distinguish different Actors when rendering segmentation masks."
    ]
   },
   {
